Criação do footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>Created by:
+            <a href="https://www.instagram.com/renatof._/?hl=pt-br" target="_blank">@Rent.Ferreira</a>
+        </p>
+    </footer>
     
 </body>
 </html>
