--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="icones/fontawesome/css/all.min.css">
     
-    <title>Renato-Ferreira-Profile</title>
+    <title>Renato-G-Ferreira-Profile</title>
     
 </head>
 <body>
     <header>
         <nav>
-            <a class="logo" href="index.html">Renato Ferreira</a>
+            <a class="logo" href="index.html">Renato G Ferreira</a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -28,6 +28,9 @@
         </nav>
     </header>
     <main>
+        <div id="body-site">  <!-- INICIO DIV CORPO DO SITE-->
+
+        </div> <!-- FIM DIV CORPO DO SITE-->
 
     </main>
     <footer>
