criacao do js - menu mobile

--- a/index.html
+++ b/index.html
@@ -29,15 +29,37 @@
     </header>
     <main>
         <div id="body-site">  <!-- INICIO DIV CORPO DO SITE-->
-
+            <div id="lateral">
+                <img src="#" alt="Foto de Perfil">
+                <div class="profile-contact">
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="profile-text">
+                    Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá, com o grande objetivo de crescimento na área de desenvolvimento de software. Gosto de aprender coisas novas e aplicá-las.
+                </div>
+            </div>
+            <div id="principal">
+                <div class="custom-project"></div>
+                <div class="custom-project"></div>
+                <div class="custom-project"></div>
+                <div class="custom-project"></div>
+                <div class="custom-project"></div>
+                <div class="custom-project"></div>
+            </div> 
         </div> <!-- FIM DIV CORPO DO SITE-->
-
     </main>
     <footer>
         <p>Created by:
             <a href="https://www.instagram.com/renatof._/?hl=pt-br" target="_blank">@Rent.Ferreira</a>
         </p>
     </footer>
+    <script src="js/mobile-navbar.js"></script>
     
 </body>
 </html>
