modificacao simples no readme e index

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         </p>
     </footer>
     <script src="js/mobile-navbar.js"></script>
+
+    <!-- NÃO ESQUECER DE INCLUIR A SHIV -->
     
 </body>
 </html>
