--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="#">inicio</a></li>
                 <li><a href="sobre.html">sobre</a></li>
                 <li><a href="projetos.html">projetos</a></li>
