Adicao de main e footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#">inicio</a></li>
+                <li><a href="#">início</a></li>
                 <li><a href="sobre.html">sobre</a></li>
                 <li><a href="projetos.html">projetos</a></li>
             </ul>
@@ -41,7 +41,11 @@
                     </ul>
                 </div>
                 <div class="profile-text">
-                    Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá, com o grande objetivo de crescimento na área de desenvolvimento de software. Gosto de aprender coisas novas e aplicá-las.
+                    <h1>Renato Gomes Ferreira</h1>
+                    <span>Belo Horizonte - MG</span>
+                    <P>
+                        Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá, com o grande objetivo de crescimento na área de desenvolvimento de software. Gosto de aprender coisas novas e aplicá-las.
+                    </P>
                 </div>
             </div>
             <div id="principal">
