--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <main>
         <div id="body-site">  <!-- INICIO DIV CORPO DO SITE-->
             <div id="lateral">
-                <img src="#" alt="Foto de Perfil">
+                <img id="profile-picture" src="../images/profile-image.png" alt="Foto de Perfil">
                 <div class="profile-contact">
-                    <ul>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                    <ul class="profile-contact-list">
+                        <li><a href="#">x</a></li>
+                        <li><a href="#">y</a></li>
+                        <li><a href="#">z</a></li>
+                        <li><a href="#">a</a></li>
+                        <li><a href="#">b</a></li>
                     </ul>
                 </div>
                 <div class="profile-text">
