--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="icones/fontawesome/css/all.min.css">
+    
 
     <!--[if lt IE 9]>
 	    <script src="js/html5shiv.js"></script>
@@ -37,18 +38,18 @@
                 <img id="profile-picture" src="../images/profile-image.png" alt="Foto de Perfil">
                 <div class="profile-contact">
                     <ul class="profile-contact-list">
-                        <li><a href="#">x</a></li>
-                        <li><a href="#">y</a></li>
-                        <li><a href="#">z</a></li>
-                        <li><a href="#">a</a></li>
-                        <li><a href="#">b</a></li>
+                        <li><a href="https://api.whatsapp.com/send?phone=+5531991627440" target="_blank" title="Whatsapp"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://www.instagram.com/renatof._/?hl=pt-br" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="mailto:renatoyferreira@gmail.com" title="E-mail"><i class="fas fa-envelope"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/renato-ferreira-01/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/RenatoGFerreira" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
                     </ul>
                 </div>
                 <div class="profile-text">
                     <h1>Renato Gomes Ferreira</h1>
                     <span>Belo Horizonte - MG</span>
                     <P>
-                        Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá, com o grande objetivo de crescimento na área de desenvolvimento de software. Gosto de aprender coisas novas e aplicá-las.
+                        Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá. Possuo conhecimentos em HTML, CSS, Javascript, alguns frameworks como Bootstrap e atualmente estou estudando Node.js. 
                     </P>
                 </div>
             </div>
@@ -68,6 +69,7 @@
         </p>
     </footer>
     <script src="js/mobile-navbar.js"></script>
+    <script src="https://kit.fontawesome.com/a5a4d38df1.js" crossorigin="anonymous"></script>
 
     
 </body>
