ajustando detalhes na index e css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1>Renato Gomes Ferreira</h1>
                     <span>Belo Horizonte - MG</span>
                     <P>
-                        Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá. Possuo conhecimentos em HTML, CSS, Javascript, alguns frameworks como Bootstrap e atualmente estou estudando Node.js. 
+                        Atualmente estou formando o curso superior de Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá. Possuo conhecimentos em HTML, CSS, Javascript, Git, Github, alguns frameworks como Bootstrap e atualmente estou estudando Node.js. 
                     </P>
                 </div>
             </div>
