Ajuste de detalhes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img id="profile-picture" src="../images/profile-image.png" alt="Foto de Perfil">
                 <div class="profile-contact">
                     <ul class="profile-contact-list">
-                        <li><a href="https://api.whatsapp.com/send?phone=+5531991627440" target="_blank" title="Whatsapp"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://api.whatsapp.com/send?phone=5531991627440" target="_blank" title="Whatsapp"><i class="fab fa-whatsapp"></i></a></li>
                         <li><a href="https://www.instagram.com/renatof._/?hl=pt-br" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                         <li><a href="mailto:renatoyferreira@gmail.com" title="E-mail"><i class="fas fa-envelope"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/renato-ferreira-01/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
