--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <div id="corpo-site">   <!-- INICIO DIV CORPO DO SITE-->
+        <div id="body-site">   <!-- INICIO DIV CORPO DO SITE-->
             <div class="page-projects">
                 <div class="custom-project"></div>
                 <div class="custom-project"></div>
