Correcao de erros no mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <div id="body-site">  <!-- INICIO DIV CORPO DO SITE-->
             <div id="lateral">
-                <img id="profile-picture" src="../images/profile-image.jpg" alt="Foto de Perfil">
+                <img id="profile-picture" src="../images/profile-image-min.jpg" alt="Foto de Perfil">
                 <div class="profile-contact">
                     <ul class="profile-contact-list">
                         <li><a href="https://api.whatsapp.com/send?phone=5531991627440" target="_blank" title="Whatsapp"><i class="fab fa-whatsapp"></i></a></li>
