edicao da página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -43,15 +43,23 @@
                 <div class="profile-text-about">
                     <h1>Renato Gomes Ferreira</h1>
                     <span>Belo Horizonte - MG</span>
+                    <h3>sobre</h3>
                     <p>
-                        Nascido em 12 de Dezembro de 1990, possuo <span id="my-age">31</span> anos. Sou formado e pós-graduado pela UEMG em Gestão de Recursos Humanos e Gestão de Pessoas.
+                         Possuo <span id="my-age">31</span> anos. Estou formando o curso de Análise e Desenvolvimento de Sistemas, sendo esta a minha segunda graduação, porém a primeira na área de tecnologia. Já possuo uma pós-graduado em Gestão de Pessoas. Tenho habilidades em leitura e escrita em inglês. 
                     </p>
-                    <p>
-                        Trabalho diretamente com atendimento ao público nas linhas de metrô de Belo Horizonte pela empresa CBTU-BH.
-                    </p>
-                    <p>
-                        Atualmente estou cursando o 4º período de Análise e Desenvlvimento de Sistemas, pela Universidade Estácio de Sá, com o grande objetivo de crescimento na área de desenvolvimento de software. Gosto de aprender coisas novas e aplicá-las.
-                    </p>
+                    <h3>conhecimentos</h3>
+                    <div class="knowledges">
+                        <img src="../images/conhecimentos/image-html.png" title="html" alt="HTML-5">
+                        <img src="../images/conhecimentos/image-css.png" title="css" alt="CSS-3">
+                        <img src="../images/conhecimentos/image-js.png" title="JavaScript" alt="Javascript">
+                        <img src="../images/conhecimentos/image-boots.png" title="Bootstrap" alt="Bootstrap">
+                        <img src="../images/conhecimentos/image-node.png" title="Node.Js" alt="Node.js">
+                        <img src="../images/conhecimentos/image-git.png" title="Git" alt="git">
+                        <img src="../images/conhecimentos/image-github.png" title="Github" alt="GitHub">
+                    </div>
+                    
+                    <h3>certificações</h3>
+                    
                 </div>
             </div>
         </div> <!-- FIM DIV CORPO DO SITE-->
