--- a/sobre.html
+++ b/sobre.html
@@ -45,17 +45,17 @@
                     <span>Belo Horizonte - MG</span>
                     <h3>sobre</h3>
                     <p>
-                         Possuo <span id="my-age">31</span> anos. Estou formando o curso de Análise e Desenvolvimento de Sistemas, sendo esta a minha segunda graduação, porém a primeira na área de tecnologia. Já possuo uma pós-graduado em Gestão de Pessoas. Tenho habilidades em leitura e escrita em inglês. 
+                         Tenho <span id="my-age">31</span> anos. Estou formando o curso de Análise e Desenvolvimento de Sistemas, sendo esta a minha segunda graduação, porém a primeira na área de tecnologia. Já possuo uma pós-graduação em Gestão de Pessoas. Tenho habilidades em leitura e escrita em inglês. 
                     </p>
                     <h3>conhecimentos</h3>
                     <div class="knowledges">
-                        <img src="../images/conhecimentos/image-html.png" title="html" alt="HTML-5">
-                        <img src="../images/conhecimentos/image-css.png" title="css" alt="CSS-3">
-                        <img src="../images/conhecimentos/image-js.png" title="JavaScript" alt="Javascript">
-                        <img src="../images/conhecimentos/image-boots.png" title="Bootstrap" alt="Bootstrap">
-                        <img src="../images/conhecimentos/image-node.png" title="Node.Js" alt="Node.js">
-                        <img src="../images/conhecimentos/image-git.png" title="Git" alt="git">
-                        <img src="../images/conhecimentos/image-github.png" title="Github" alt="GitHub">
+                        <img src="images/conhecimentos/image-html.png" title="html" alt="HTML-5">
+                        <img src="images/conhecimentos/image-css.png" title="css" alt="CSS-3">
+                        <img src="images/conhecimentos/image-js.png" title="JavaScript" alt="Javascript">
+                        <img src="images/conhecimentos/image-boots.png" title="Bootstrap" alt="Bootstrap">
+                        <img src="images/conhecimentos/image-node.png" title="Node.Js" alt="Node.js">
+                        <img src="images/conhecimentos/image-git.png" title="Git" alt="git">
+                        <img src="images/conhecimentos/image-github.png" title="Github" alt="GitHub">
                     </div>
                     
                     <h3>certificações</h3>
