foto de perfil e descricões

--- a/sobre.html
+++ b/sobre.html
@@ -37,15 +37,18 @@
     <main>
         <div id="body-site"> <!-- INICIO DIV CORPO DO SITE-->
             <div id="about-renato">
-                <div class="renato-image">
-                    <img src="images/imagem-vertical.jpg" alt="">
-                </div>
+                <!-- <div class="renato-image">
+                    <img src="images/imagem-vertical.jpg" alt="Imagem de corpo todo">
+                </div> -->
                 <div class="profile-text-about">
                     <h1>Renato Gomes Ferreira</h1>
                     <span id="city">Belo Horizonte - MG</span>
                     <h3>sobre:</h3>
                     <p>
-                         Tenho <span id="my-age">31</span> anos. Estou formando o curso de Análise e Desenvolvimento de Sistemas, sendo esta a minha segunda graduação, porém a primeira na área de tecnologia. Já possuo uma pós-graduação em Gestão de Pessoas. Tenho habilidades em leitura e escrita em inglês. 
+                         Tenho <span id="my-age">31</span> anos. Estou formando o curso de Análise e Desenvolvimento de Sistemas, sendo esta a minha segunda graduação, porém a primeira na área de tecnologia. Possuo uma pós-graduação em Gestão de Pessoas. Tenho habilidades em leitura e escrita em inglês. 
+                    </p>
+                    <p>
+                        Este site foi construido em HTML, CSS e Javascript e outros projetos poderão ser vistos no meu <a href="https://github.com/RenatoGFerreira">GitHub</a>.
                     </p>
                     <h3>conhecimentos:</h3>
                     <div class="knowledges">
@@ -58,7 +61,7 @@
                         <img src="images/conhecimentos/image-github.png" title="Github" alt="GitHub">
                     </div>
                     
-                    <h3>certificações:</h3>
+                    <!-- <h3>certificações:</h3> -->
                     
                 </div>
             </div>
